--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,3 +186,8 @@ code {
     @apply absolute w-auto p-2 text-sm m-2 min-w-max translate-x-3 right-0 top-5 z-10 rounded-md shadow-md text-color-dark-layer-2 bg-gray-200 origin-center scale-0 transition-all duration-100 ease-linear group-hover:scale-100;
   }
 }
+
+.cm-editor,
+.ͼ16 {
+  height: 100% !important;
+}
